# Blueprint

./: CMakeLists.txt
BlueprintCore/: CMakeLists.txt
BlueprintCore/Include/Blueprint/Core/: Exception.hpp  Sign.hpp
BlueprintCore/Source/Blueprint/Core/: Exception.cpp  Sign.cpp
BlueprintEditor/: CMakeLists.txt
BlueprintEditor/Include/Blueprint/Editor/: Application.hpp  EditorPalette.hpp  EditorPaletteWindow.hpp  GuiApi.hpp  MainMenuBar.hpp  Palette.hpp  PaletteWindow.hpp  Scene.hpp  SceneEditor.hpp  SceneEditorWindow.hpp  SceneFabric.hpp  SceneManager.hpp  ScenePalette.hpp  SceneTree.hpp  Window.hpp  WindowManager.hpp
BlueprintEditor/Include/Blueprint/Editor/Gui/: ScenePaletteWindow.hpp  SceneTreeRenderer.hpp  SceneTreeWindow.hpp  Window.hpp  WindowManager.hpp
BlueprintEditor/Source/Blueprint/Editor/: Application.cpp  EditorPalette.cpp  EditorPaletteWindow.cpp  GuiApi.cpp  MainMenuBar.cpp  Palette.cpp  PaletteWindow.cpp  Scene.cpp  SceneEditor.cpp  SceneEditorWindow.cpp  SceneFabric.cpp  SceneManager.cpp  ScenePalette.cpp  Window.cpp  WindowManager.cpp
BlueprintEditor/Source/Blueprint/Editor/Gui/: Window.cpp
BlueprintExamples/: CMakeLists.txt
BlueprintExamples/Platformer/Core/: CMakeLists.txt
BlueprintExamples/Platformer/Core/Include/Platformer/: Loader.hpp  Random.hpp  Saver.hpp  TilesHolder.hpp
BlueprintExamples/Platformer/Core/Source/Platformer/: Loader.cpp  Random.cpp  Saver.cpp  TilesHolder.cpp
BlueprintExamples/Platformer/Editor/: CMakeLists.txt
BlueprintExamples/Platformer/Editor/Include/Platformer/: CastleLevel.hpp  CastleLevelExt.hpp  FirstLevel.hpp  ItemPreview.hpp  LastLevel.hpp  Level.hpp  SceneEditor.hpp  SpriteObject.hpp  SpriteObjectsHolder.hpp
BlueprintExamples/Platformer/Editor/Source/: Main.cpp
BlueprintExamples/Platformer/Editor/Source/Platformer/: CastleLevel.cpp  CastleLevelExt.cpp  FirstLevel.cpp  ItemPreview.cpp  LastLevel.cpp  Level.cpp  SceneEditor.cpp  SpriteObject.cpp  SpriteObjectsHolder.cpp
BlueprintExamples/Platformer/Game/: CMakeLists.txt
BlueprintExamples/Platformer/Game/Include/Platformer/: Camera.hpp  CameraShaker.hpp  CastleLevel.hpp  CastleLevelExt.hpp  Door.hpp  FirstLevel.hpp  FloatingHint.hpp  Hedgehog.hpp  HedgehogsHolder.hpp  Hint.hpp  HintHog.hpp  LastLevel.hpp  PhysicObject.hpp  Player.hpp  PlayerDead.hpp  Rando.hpp  RandoHolder.hpp  RandoMessage.hpp  RandosHolder.hpp  SpriteObject.hpp
BlueprintExamples/Platformer/Game/Source/: Main.cpp
BlueprintExamples/Platformer/Game/Source/Platformer/: Camera.cpp  CameraShaker.cpp  CastleLevel.cpp  CastleLevelExt.cpp  Door.cpp  FirstLevel.cpp  FloatingHint.cpp  Hedgehog.cpp  HedgehogsHolder.cpp  Hint.cpp  HintHog.cpp  LastLevel.cpp  PhysicObject.cpp  Player.cpp  PlayerDead.cpp  Rando.cpp  RandoMessage.cpp  RandosHolder.cpp  SpriteObject.cpp
BlueprintExamples/Platformer/Resources/Scenes/: Empty Level Extended.scenebp  Empty Level.scenebp  Final Scene.scenebp  Level 1.scenebp  Level 2.scenebp  Level 3.scenebp  Level 4.scenebp  Level 5.scenebp  Level 6.scenebp  Main Scene.scenebp
BlueprintGame/: CMakeLists.txt
BlueprintGame/Include/Blueprint/Game/: Application.hpp  Scene.hpp  SceneFabric.hpp  SceneFabric.inl  SceneManager.hpp  SceneManager.inl
BlueprintGame/Source/Blueprint/Game/: Application.cpp  Scene.cpp  SceneFabric.cpp  SceneManager.cpp
BlueprintResources/: CMakeLists.txt
BlueprintResources/Include/Blueprint/Resources/: ResourceManager.hpp  TextureManager.hpp
BlueprintResources/Source/Blueprint/Resources/: ResourceManager.cpp  TextureManager.cpp
Editor/: CMakeLists.txt
Editor/Include/Editor/: Application.hpp  SceneManager.hpp
Editor/Include/Example/: Application.hpp  MyScene.hpp
Editor/Source/: Main.cpp
Editor/Source/Example/: Application.cpp  MyScene.cpp
Game/: CMakeLists.txt
Game/Include/Example/: Application.hpp  MyApplication.hpp  MyScene.hpp
Game/Include/Game/: MyApplication.hpp  MyScene.hpp
Game/Source/: Main.cpp
Game/Source/Example/: Application.cpp  MyApplication.cpp  MyScene.cpp
Game/Source/Game/: MyApplication.cpp  MyScene.cpp
Resources/Scenes/: Him.bpscene  Main Menu.bpscene  Prince.bpscene
